updating controller methods + refactoring exception