@@ -11,9 +11,10 @@ import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.IanaLinkRelations;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.util.UriUtils;
 
+import java.nio.charset.StandardCharsets;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static org.springframework.beans.BeanUtils.copyProperties;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
@@ -28,35 +29,71 @@ public class RestaurantController {
     private final RestaurantModelAssembler modelAssembler;
     private final RestaurantMapper mapper;
 
-    //RADI + novi mapper
+    //RADI
     @GetMapping
     public CollectionModel<EntityModel<Restaurant>> getRestaurants() {
         var restaurants =
                 mapper.entitiesToModels(restaurantService.findAllRestaurants()).stream()
                         .map(modelAssembler::toModel)
-                        .collect(Collectors.toList());
+                        .toList();
 
-        return CollectionModel.of(restaurants, linkTo(methodOn(RestaurantController.class).getRestaurants()).withSelfRel());
+        return CollectionModel.of(restaurants, linkTo(methodOn(RestaurantController.class)
+                .getRestaurants()).withSelfRel());
     }
 
     //RADI
     @GetMapping("/{name}")
     public EntityModel<Restaurant> getRestaurantByName(@PathVariable String name) {
         var restaurantEntity = restaurantService.findRestaurantByName(name)
-                .orElseThrow(() -> new RestaurantNotFoundException(name));
+                .orElseThrow(() -> new RestaurantNotFoundException("Could not find restaurant with name " + name));
 
         var restaurantModel = mapper.entityToModel(restaurantEntity);
 
         return modelAssembler.toModel(restaurantModel);
     }
 
-    //NE RADI, ADMIN method
+    //RADI
+    @GetMapping("/address/{address}")
+    public EntityModel<Restaurant> getRestaurantByAddress(@PathVariable String address) {
+        var restaurantEntity = restaurantService.findRestaurantByAddress(address)
+                .orElseThrow(() -> new RestaurantNotFoundException("Could not find restaurant with address " +
+                        address));
+
+        var restaurantModel = mapper.entityToModel(restaurantEntity);
+
+        return modelAssembler.toModel(restaurantModel);
+    }
+
+    //RADI
+    @GetMapping("/municipality/{municipality}")
+    public CollectionModel<EntityModel<Restaurant>> getRestaurantsByMunicipality(@PathVariable String municipality) {
+        var restaurants =
+                mapper.entitiesToModels(restaurantService.findAllRestaurantsInMunicipality(municipality)).stream()
+                        .map(modelAssembler::toModel)
+                        .toList();
+
+        return CollectionModel.of(restaurants, linkTo(methodOn(RestaurantController.class)
+                .getRestaurantsByMunicipality(municipality)).withSelfRel());
+    }
+
+    //RADI
+    @GetMapping("/city/{city}")
+    public CollectionModel<EntityModel<Restaurant>> getRestaurantsByCity(@PathVariable String city) {
+        var restaurants =
+                mapper.entitiesToModels(restaurantService.findAllRestaurantsInCity(city)).stream()
+                        .map(modelAssembler::toModel)
+                        .toList();
+
+        return CollectionModel.of(restaurants, linkTo(methodOn(RestaurantController.class)
+                .getRestaurantsByCity(city)).withSelfRel());
+    }
+
+    //RADI, ADMIN method
     @GetMapping("/admin/id/{id}")
     public EntityModel<Restaurant> getRestaurantByIdAdmin(@PathVariable UUID id) {
         var restaurantEntity = restaurantService.findRestaurantById(id)
                 .orElseThrow(() -> new RestaurantNotFoundException(id));
 
-        //var restaurantModel = mapper.mapEntityToModel(restaurantEntity);
         var restaurantModel = mapper.entityToModel(restaurantEntity);
 
         return modelAssembler.toAdminModel(restaurantModel, restaurantEntity.getId());
@@ -64,14 +101,14 @@ public class RestaurantController {
 
     //RADI, admin method!!!
     @GetMapping("/admin/name/{name}")
-    public UUID findRestaurantIDByName(@PathVariable String name) {
+    public ResponseEntity<UUID> findRestaurantIDByName(@PathVariable String name) {
         var id = restaurantService.findRestaurantIdByName(name);
 
         if (id == null) {
-            throw new RestaurantNotFoundException(id);
+            throw new RestaurantNotFoundException("Could not find restaurant ID for name: " + name);
         }
 
-        return id;
+        return ResponseEntity.ok(id);
     }
 
     //RADI: custom update with fields, PATCH mapping?
@@ -83,7 +120,7 @@ public class RestaurantController {
                     copyProperties(newRestaurant.getLocation(), restaurantEntity.getLocation());
                     return restaurantService.updateRestaurant(restaurantEntity);
                 })
-                .orElseThrow(() -> new RestaurantNotFoundException(name));
+                .orElseThrow(() -> new RestaurantNotFoundException("Could not find restaurant with name: " + name));
 
         var restaurantModel = mapper.entityToModel(updatedRestaurant);
 
@@ -97,7 +134,6 @@ public class RestaurantController {
     //RADI
     @PostMapping
     public ResponseEntity<?> addRestaurant(@RequestBody Restaurant restaurant) {
-        //var restaurantEntity = mapper.mapModelToEntity(restaurant);
         var restaurantEntity = mapper.modelToEntity(restaurant);
 
         restaurantService.updateRestaurant(restaurantEntity);
@@ -166,5 +202,13 @@ public class RestaurantController {
         return model;
     }
 
+    @GetMapping("/test/address/{address}")
+    public Restaurant getByAddress(@PathVariable String address) {
+        String encodedAddress = UriUtils.encodePathSegment(address, StandardCharsets.UTF_8);
+
+        var entity = restaurantService.findRestaurantByAddress(encodedAddress);
+
+        return mapper.entityToModel(entity.get());
+    }
 
 }
